@@ -1,8 +1,6 @@
 
 This are some of the features to be implemented in the future:
 
-- A better website for pybot.
-
 - Adapt distutils classes to install every necessary file in their respective
   directories.
 
@@ -10,7 +8,7 @@ This are some of the features to be implemented in the future:
 
 - Cross identification between servers (is this useful?).
 
-- Setup pybot nick when connecting.
+- Implement nickserv identification (with generic messages on connection).
 
 - Develop admin module for direct sql access.
 
