@@ -10,6 +10,7 @@
 
 [global]
 ;http_proxy = http://127.0.0.1:8080
+;default_nick = _pybot_
 
 [permission]
 ; This will tell pybot who should have unrestricted access to all
